fixed white space at the right side

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,15 +53,11 @@ html {
   line-height: 1.8; }
 
 body {
-  position: relative;
-  width: 100vw; }
+  position: relative; }
 
-.hero,
-.about,
-.listings,
-#mapDiv,
-.footer {
-  overflow-x: hidden; }
+.wrapper {
+  max-width: 100%;
+  overflow: hidden; }
 
 /* HEADER */
 .header {
@@ -216,12 +212,7 @@ body {
     .footer {
       height: 400px; } } }
 
-.approach__grid {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 30px; }
-
+.approach__grid,
 .testimonials__grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -253,7 +244,7 @@ body {
     margin-bottom: 30px; }
   .blog__grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     column-gap: 30px;
     row-gap: 30px; }
   .blog__box {
@@ -268,17 +259,37 @@ body {
       font-size: 12px;
       padding: 5px;
       justify-content: space-between; }
-    .blog__box-1 {
-      grid-column: 1 / 2;
-      grid-row: 1 / 2; }
-    .blog__box-2 {
-      grid-column: 2 / 4;
-      grid-row: 1 / 2; }
-    .blog__box-3 {
-      grid-column: 4 / -1;
-      grid-row: 1 / 3; }
-    .blog__box-4 {
-      grid-column: 1 / 3; }
+
+.strongLeadership__grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 30px; }
+
+@media only screen and (max-width: 992px) {
+  .homeValuation {
+    padding: 50px 0;
+    text-align: center; }
+  .approach__grid,
+  .testimonials__grid,
+  .homeValuation__grid,
+  .strongLeadership__grid {
+    grid-template-columns: repeat(1, 1fr);
+    row-gap: 50px; }
+  .approach__box .bottom {
+    top: 150px; }
+  .testimonials__box {
+    text-align: center; }
+    .testimonials__box p {
+      margin-bottom: 20px; }
+  .homeValuation__box p {
+    margin: 0 auto;
+    margin-bottom: 30px; }
+  .homeValuation__box img {
+    width: 100%; } }
+
+@media only screen and (max-width: 768px) {
+  .blog__grid {
+    grid-template-columns: repeat(1, 1fr); } }
 
 .listings {
   padding: 50px 0;
@@ -408,10 +419,6 @@ body {
   width: 100vw;
   padding: 50px 0;
   background-color: rgba(236, 235, 235, 0.5); }
-  .strongLeadership__grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 30px; }
   .strongLeadership__box {
     width: 100%;
     text-align: center; }
@@ -569,10 +576,13 @@ body {
   color: white;
   position: absolute;
   font-weight: bold;
-  left: 50%; }
+  left: 50%;
+  width: 100%;
+  text-align: center; }
 
 .hero__heading {
   top: 50%;
+  width: 90%;
   transform: translate(-50%, -50%); }
 
 .hero__paragraph {
