--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -1,13 +1,4 @@
-.approach {
-
-    &__grid {
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 30px;
-    }
-}
-
+.approach,
 .testimonials {
 
     &__grid {
@@ -15,8 +6,8 @@
         grid-template-columns: repeat(3, 1fr);
         column-gap: 30px;
     }
-
 }
+
 
 .homeValuation {
     &__grid {
@@ -57,7 +48,7 @@
 
     &__grid {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         column-gap: 30px;
         row-gap: 30px;
     }
@@ -79,27 +70,80 @@
             justify-content: space-between;
         }
 
-        &-1 {
-            grid-column: 1 / 2;
-            grid-row: 1 / 2;
 
+
+
+
+
+    }
+}
+
+.strongLeadership {
+    &__grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 30px;
+    }
+}
+
+@media only screen and (max-width:992px) {
+
+    .homeValuation {
+        padding: 50px 0;
+        text-align: center;
+    }
+
+    .approach,
+    .testimonials,
+    .homeValuation,
+    .strongLeadership {
+        &__grid {
+
+            grid-template-columns: repeat(1, 1fr);
+            row-gap: 50px;
         }
 
-        &-2 {
-            grid-column: 2 / 4;
-            grid-row: 1 / 2;
+    }
+
+    .approach {
+
+
+        &__box {
+            .bottom {
+                top: 150px;
+            }
         }
+    }
 
-        &-3 {
-            grid-column: 4 / -1;
-            grid-row: 1 / 3;
+    .testimonials {
+        &__box {
+            text-align: center;
+
+            p {
+                margin-bottom: 20px;
+            }
         }
+    }
 
-        &-4 {
-            grid-column: 1 / 3;
+    .homeValuation {
+        &__box {
+            p {
+
+                margin: 0 auto;
+                margin-bottom: 30px;
+            }
+
+            img {
+                width: 100%;
+            }
         }
+    }
+}
 
-        &-5 {}
-
+@media only screen and (max-width:768px) {
+    .blog {
+        &__grid {
+            grid-template-columns: repeat(1, 1fr);
+        }
     }
 }
